# code-samples-aoc-2023

./: README.md
cpp/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  compile_commands.json  format  lint  run
cpp/src/: main.cpp
cpp/src/days/: day01.cpp  day01.h  day02.cpp  day02.h  day03.cpp  day03.h  day04.cpp  day04.h  day05.cpp  day05.h
cpp/src/lib/: runner.cpp  runner.h
data/day03/: test_2.output
data/day04/: test_2.output
data/day05/: test_1.output  test_2.output
data/day08/: test_2.output
data/day10/: example_e.input
data/day11/: test_1.output  test_2.output
data/day18/: loop1.txt  test_2.output
data/day19/: test_1.output  test_2.output
data/day20/: test_1.output  test_2.output
data/day21/: test_2.output
data/day24/: test_2.output
js/: package-lock.json  package.json  run
js/src/days/: day01.js  day02.js  day03.js  day04.js  day05.js  day06.js  day07.js  day08.js  day09.js  day10.js  day11.js  day12.js  day13.js  day14.js  day15.js  day16.js  day17.js  day18.js  day19.js  day20.js  day21.js  day22.js  day23.js  day24.js  day24.py  day25.js
js/src/lib/: iterators.js  math.js  parsing.js  runner.js  set.js
swift/: .swiftformat  .swiftlint.yml  Package.swift  format  lint  run
swift/Sources/: main.swift
swift/Sources/days/: day01.swift  day02.swift  day03.swift  day04.swift  day05.swift  day06.swift  day07.swift
swift/Sources/lib/: runner.swift
typescript/: .eslintrc  .eslintrc.cjs  package-lock.json  package.json  run  tsconfig.json
typescript/src/days/: day17.ts
typescript/src/lib/: Heap.test.ts  Heap.ts  (+2 more)
(+5 files in other folders)
